--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 		</div><!--// bd -->
 
 		<div id="ft">
-			<p> Ahmed Abdulkareem &mdash; <a href="mailto:name@yourdomain.com">captain@gmail.com</a> &mdash; +4470559 2635xx</p>
+			<p> Ahmed Abdulkareem &mdash; <a href="mailto:name@yourdomain.com">captain-dee@gmail.com</a> &mdash; +4470559 2635xx</p>
 		</div><!--// footer -->
 
 	</div><!-- // inner -->
